--- a/main.css
+++ b/main.css
@@ -59,9 +59,7 @@ p{
  h4 {
         text-transform: uppercase; }
 
- .foto-card-buldogue {
-            margin: 1em 0; }
-
+ /*
         .foto-card-buldogue .conbuldogue{
             background-size: 28em 15em;
             background-position: center;
@@ -105,7 +103,7 @@ p{
 .foto-card-buldogue .detalhecao .active {
     background-color: #C3FF00;
     color: #303030; 
-}
+}*/
 
 
     
@@ -117,7 +115,7 @@ p{
     }
 
 
-    .foto-card-lhasa {
+    /*.foto-card-lhasa {
         margin: 1em 0; }
 
     .foto-card-lhasa .conlhasa {
@@ -157,7 +155,7 @@ color: #EFEFEF;
 .foto-card-lhasa .detalhecao .active {
 background-color: #C3FF00;
 color: #303030; 
-}
+}*/
 
 .botaodetalhes{
     background-color: #535353;
